--- a/web_only.yml
+++ b/web_only.yml
@@ -1,6 +1,7 @@
 templates:
   - templates/web.template.yml
   - templates/web.ratelimited.template.yml
+  - templates/cloudflare.template.yml
 
 env:
   LC_ALL: en_US.UTF-8
